fastAPI 연동 및 db 저장 완료