@@ -10,10 +10,12 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.stereotype.Component;
 
 import java.security.Key;
+import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
@@ -77,13 +79,20 @@ public class JwtAuthStrategy implements AuthStrategy {
 
     // 3. 토큰으로부터 Authentication 객체 얻기
     public Authentication getAuthentication(String token) {
-        String username = getUsername(token);
-        Optional<Users> userOpt = usersRepository.findByUsername(username);
-        Users user = userOpt.orElseThrow(() -> new RuntimeException("유저 없음"));
+        try {
+            String username = getUsername(token);
+            System.out.println("🔍 JWT에서 추출한 username: " + username);
 
-        // Spring Security가 쓰는 UserDetails 객체로 변환
-        User principal = new User(user.getUsername(), "", /* 권한 리스트 */ List.of());
-        return new UsernamePasswordAuthenticationToken(principal, token, principal.getAuthorities());
+            // 간단한 인증 객체 생성 (authorities는 필요에 따라 설정)
+            return new UsernamePasswordAuthenticationToken(
+                    username,
+                    null,
+                    Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"))
+            );
+        } catch (Exception e) {
+            System.out.println("❌ JWT 인증 객체 생성 실패: " + e.getMessage());
+            return null;
+        }
     }
 
     // 토큰에서 사용자 정보 추출 로직
